# blacklist_watcher

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  version.py
.github/workflows/: python-package.yml
src/: Dockerfile  main.py
src/core/: settings.py
src/schemas/: __init__.py  address_dedup_info.py  blacklist_schema.py  config.py  dedup_destination_category.py  processing_status.py  watcher_schema.py
src/service/: __init__.py  address_data_prepare.py  blacklist_sync.py  file_parser.py  file_processor.py  file_reader.py  file_status.py  files_watcher.py  main_processor.py  processing_status_storage.py
src/service/tests/: test_file_parser.py  test_file_reader.py  test_file_reader_data.py  test_file_watcher.py
src/tests/: test_version.py
src/tests/schemas/: test_address_dedup_info.py
src/tests/service/: test_address_data_prepare.py  test_file_parser.py  test_file_reader_data.py  test_processing_status.py
src/tests/utils/: test_file_utils.py
src/utils/: __init__.py  file_utils.py  misc_utils.py
src/utils/tests/: test_misc_utils.py
