[tool.poetry]
name = "watcher"
version = "1.0.1"
description = "File watcher for parsing information online"
authors = ["Dmitriev Andrey <justkeepwalking@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
pydantic = "^2.5.2"
aiofiles = "^23.2.1"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
isort = "^5.13.2"
types-pyyaml = "^6.0.12.12"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
coverage = "^7.3.3"
types-aiofiles = "^23.2.0.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
force_single_line = true

[tool.mypy]
python_version = 3.11
plugins = ["pydantic.mypy"]
check_untyped_defs = true

[tool.black]
line-length = 120
target-version = ["py311"]
skip-string-normalization = true

[tool.flake8]
max-line-length = 120
